--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "alasql": "^0.4.4",
     "d3-request": "^1.0.6",
     "deck.gl": "^5.0.2",
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-map-gl": "^3.2.0",
@@ -14,6 +15,8 @@
   },
   "browser": "./dist/alasql.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
