--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "d3-request": "^1.0.6",
     "deck.gl": "^5.0.2",
     "gh-pages": "^1.1.0",
+    "rc-slider": "^8.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-map-gl": "^3.2.0",
