--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-map-gl": "^3.2.0",
     "react-scripts": "1.1.0"
   },
-  "browser": "./dist/alasql.js",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -22,5 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3",
+    "babel-jest": "^22.4.3"
   }
 }
