--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://ajduberstein.github.io/sf_growth",
   "dependencies": {
     "alasql": "^0.4.4",
+    "d3-ease": "^1.0.3",
     "d3-request": "^1.0.6",
     "deck.gl": "^5.0.2",
     "gh-pages": "^1.1.0",
