--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-responsive": "^4.1.0",
     "react-scripts": "1.1.0",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.80.0"
+    "semantic-ui-react": "^0.80.0",
+    "victory": "^0.26.0"
   },
   "scripts": {
     "predeploy": "npm run build",
