--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "d3-request": "^1.0.6",
     "deck.gl": "^5.0.2",
     "eslint": "^4.19.1",
+    "faker": "^4.1.0",
     "gh-pages": "^1.1.0",
+    "lodash": "^4.17.10",
     "rc-slider": "^8.6.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-map-gl": "^3.2.0",
+    "react-redux": "^5.0.7",
     "react-responsive": "^4.1.0",
     "react-scripts": "1.1.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.80.0",
     "victory": "^0.26.0"
@@ -35,6 +40,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "redux-logger": "^3.0.6"
   }
 }
