--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "alasql": "^0.4.4",
     "d3-ease": "^1.0.3",
     "d3-request": "^1.0.6",
+    "d3-shape": "^1.2.0",
     "deck.gl": "^5.0.2",
     "eslint": "^4.19.1",
     "faker": "^4.1.0",
@@ -19,6 +20,7 @@
     "react-redux": "^5.0.7",
     "react-responsive": "^4.1.0",
     "react-scripts": "1.1.0",
+    "react-vis": "^1.9.3",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.1",
