--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^4.19.1",
     "faker": "^4.1.0",
     "gh-pages": "^1.1.0",
+    "jest": "^23.1.0",
     "lodash": "^4.17.10",
     "rc-slider": "^8.6.0",
     "react": "^16.3.0",
@@ -42,7 +43,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
-    "jest": "^22.4.3",
+    "jest-cli": "^23.1.0",
     "redux-logger": "^3.0.6"
   }
 }
